# FEMSolver

./: .gitignore  CMakeLists.txt  README.md  dockerfile
.github/workflows/: test.yaml
doc/: cse380.tex  ref_twoscale.bib  slide.tex
m4/: CodeCoverage_short.cmake
src/: GenerateMesh.cpp  StiffnessMatrix.cpp  convergence_analysis.cpp  file_io.cpp  main.cpp
src/inputs/: inputs.txt
src/plot_code/: plot_convergence.py  plot_mesh.py
test/: inputs_test.txt  test_computeStiffnessLoad.cpp  test_convergence_analysis.cpp  test_main.cpp
